# cargo

# [[file:~/Workspace/Programming/gchemol-rs/nxgraph/nxgraph.note::*cargo][cargo:1]]
[package]
name = "nxgraph"
version = "0.0.3"
edition = "2018"
authors = ["Wenping Guo <ybyygu@gmail.com>"]

[dependencies]
serde = {version="1", features = ["derive"]}
petgraph = {version="0.5", features=["serde-1"]}

[dev-dependencies]
# cargo:1 ends here
