# cargo

# [[file:~/Workspace/Programming/gchemol-rs/nxgraph/nxgraph.note::*cargo][cargo:1]]
[package]
name = "gchemol-graph"
version = "0.1.1"
edition = "2018"
authors = ["Wenping Guo <ybyygu@gmail.com>"]
description = "Networkx-like API wrapper around petgraph"
homepage = "https://github.com/gchemol/nxgraph"
repository = "https://github.com/gchemol/nxgraph"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
serde = {version="1", features = ["derive"]}
petgraph = {version="0.5", features=["serde-1"]}
itertools = "0.8"

[dev-dependencies]

[features]
adhoc = [] # for adhoc hacking
# cargo:1 ends here
