# [[file:nxgraph.note::270a5105][270a5105]]
[package]
name = "gchemol-graph"
version = "0.1.2"
edition = "2021"
authors = ["Wenping Guo <ybyygu@gmail.com>"]
description = "Networkx-like API wrapper around petgraph"
homepage = "https://github.com/gchemol/nxgraph"
repository = "https://github.com/gchemol/nxgraph"
license = "GPL-3.0"
readme = "README.md"

[dependencies]
serde = {version="1", features = ["derive"]}
petgraph = {version="0.6", features=["serde-1"]}
itertools = "0.10"

[dev-dependencies]

[features]
adhoc = [] # for adhoc hacking
# 270a5105 ends here
